--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
-    "next-auth": "^4.24.11",
+    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
