add README with project overview and setup guide

--- a/example.env
+++ b/example.env
@@ -1,5 +1,22 @@
-# Connect to Supabase via connection pooling with Supavisor.
-DATABASE_URL="postgresql://postgres.vluclfdlkaacynqdvmel:[YOUR-PASSWORD]@aws-0-eu-central-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DATABASE_URL=""
 
-# Direct connection to the database. Used for migrations.
-DIRECT_URL="postgresql://postgres.vluclfdlkaacynqdvmel:[YOUR-PASSWORD]@aws-0-eu-central-1.pooler.supabase.com:5432/postgres"
+DIRECT_URL=""
+
+NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+
+NEXTAUTH_SECRET=""
+
+UPLOADTHING_TOKEN=""
+UPLOADTHING_SECRET=""
+UPLOADTHING_APPID=""
+
+
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=""
+STRIPE_SECRET_KEY=""
+STRIPE_WEBHOOK_SECRET=""
+
+RESEND_API_KEY=""
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+
